# tiktok

./: .gitignore
tiktok-frontend/: package.json
tiktok-frontend/components/: MainView.js  Signup.js
tiktok-frontend/context/: WalletConnectionProvider.js
tiktok-frontend/hooks/: useAccount.js
tiktok-frontend/pages/: _app.js  index.js
tiktok-frontend/styles/: Signup.module.css  globals.css
tiktok-frontend/utils/: const.js  tiktok.json  utils.js
tiktok-smartcontract/: Anchor.toml
tiktok-smartcontract/programs/tiktok-smartcontract/: Cargo.toml
tiktok-smartcontract/programs/tiktok-smartcontract/src/: lib.rs
tiktok-smartcontract/tests/: tiktok-smartcontract.ts
